<resources>
    <string name="app_name">위치 알람</string>
    <string name="str_app_name">위치 알람</string>
    <string name="str_noti">알림</string>
    <string name="str_permission_dialog_title">앱 접근 권한 안내</string>
    <string name="str_exit_app">앱 종료</string>
    <string name="str_notification_update">업데이트 알림</string>
    <string name="str_update_guide">더 좋아진 앱의 최신 버전을 준비했습니다. 새로운 버전으로 업데이트 후 이용해주세요.</string>
    <string name="str_do_update">업데이트 하기</string>
    <string name="str_do_next">다음에</string>
    <string name="str_location">위치</string>
    <string name="str_permission_guide">위치알람 이용을 위해 다음의 접근 권한 허용이 필요합니다.</string>
    <string name="str_search_location">위치 탐색</string>
    <string name="str_set_location_alarm">위치 알람 설정</string>
    <string name="str_add_location_alarm">위치 알람 추가</string>
    <string name="str_search_location_guide">현재 위치를 탐색하고 있습니다.</string>
    <string name="str_wait_please">잠시만 기다려주세요.</string>
    <string name="str_app_permission_mandatory_popup_title">필수 권한을 허용해야 서비스 정상 이용이 가능합니다.\n필수 권한을 반드시 허용해 주세요.</string>
    <string name="str_app_permission_storage_popup_desc">위치 탐색을 위해 반드시 필요한 권한입니다.</string>
    <string name="str_app_permission_storage_popup_desc2">앱을 켜지 않고 위치 탐색을 하는 위치알람 앱은 백그라운드 실행 권한이 필요합니다.</string>
    <string name="background_permission_desc">위치알람을 활성화 하고 앱을 종료하였을 경우 위치정보를수신받기 위해서 백그라운드 위치 권한이 필요합니다.\n권한>위치>위치 액세스 권한을 \"항상 허용\"으로 변경해주세요.</string>
    <string name="str_app_permission_noti_desc">알람을 수신받기 위해 알림 권한이 필요합니다.</string>
    <string name="str_noti_permission_desc">알람 기능</string>
    <string name="str_location_search_fail_desc">현재 위치를 찾을 수 없습니다.</string>
    <string name="str_do_back">뒤로가기</string>
    <string name="str_re_search">재탐색</string>
    <string name="str_confirm">확인</string>
    <string name="str_complete">완료</string>
    <string name="str_alarm_name">알람 이름</string>
    <string name="str_alarm_name_hint">알람 이름을 입력해주세요.</string>
    <string name="str_location_set_hint">알람이 울릴 위치를 선택해주세요.</string>
    <string name="str_select_current_location">현재 위치 탐색</string>
    <string name="str_select_current_location2">현재 위치로 선택</string>
    <string name="str_recently_search_address">최근 위치 탐색 목록</string>
    <string name="str_address">위치</string>
    <string name="str_empty_recently_search_address">최근 탐색한 위치가 없습니다.</string>
    <string name="chr_between"> ~ </string>
    <string name="str_time_between">시간 사이에</string>
    <string name="str_alarm_location_guide">위치를 기준으로 반경 </string>
    <string name="str_rl">를</string>
    <string name="str_alarm_location_guide2">알려주는 위치 알람</string>
    <string name="str_alarm_location_guide3">위치를</string>
    <string name="str_alarm_location_guide4">기준으로 반경 </string>
    <string name="str_alarm_location_guide5">m 를</string>
    <string name="str_way">방법</string>
    <string name="str_cancel">취소</string>
    <string name="str_time_picker_title">시간을 선택해주세요</string>
    <string name="str_hour">시간</string>
    <string name="str_minute">분</string>
    <string name="str_default_time">00:00</string>
    <string name="str_latitude">위도</string>
    <string name="str_longitude">경도</string>
    <string name="str_range">범위</string>
    <string name="str_alarm_location_guide6">알려주는 위치 알람을 추가하겠습니다.</string>
    <string name="str_add">추가</string>
    <string name="str_time">시간</string>
    <string name="str_way_0">진입하면</string>
    <string name="str_way_1">벗어나면</string>
    <string name="str_warning">경고</string>
    <string name="str_warning_duplicate_desc1">위치 알람은 1개만 활성화 할 수 있습니다.\n실행중인 위치 알람을 비활성화 해주세요</string>
    <string name="ad_attribution" translatable="false">Ad</string>
    <string name="str_review_desc">위치알람 앱에 대한 리뷰를 남겨주시면\n개선하겠습니다.</string>
    <string name="str_exit_app_question">앱을 종료하시겠습니까?</string>
    <string name="str_exit">종료</string>
    <string name="str_app_permission_popup_setting_desc">설정에서 위치권한을 허용해주세요</string>
    <string name="str_save">저장</string>
    <string name="str_remove">삭제</string>
    <string name="str_create_routine">루틴 만들기</string>
    <string name="str_alarm_permission_title">알람 권한 안내</string>
    <string name="str_alarm_permission_msg">알람 및 리마인더 권한을 허용하지 않으면 알람이 제대로 동작하지 않을 수 있어요.</string>
    <string name="str_alarm">알람 및 리마인더</string>
    <string name="str_go_setting">설정하기</string>
    <string name="str_later">나중에</string>
    <string name="str_notification">알림</string>
    <string name="str_notification_permission_msg">알림 권한을 허용하지 않으면 알림을 받을 수 없어요.</string>
    <string name="str_foreground_basic_channel_name">알림 허용</string>
    <string name="str_foreground_alarm_channel_name">알람 및 리마인더</string>
    <string name="str_location_permission_title">위치 권한 안내</string>
    <string name="str_location_permission_msg">위치 기반으로 알림을 보내드려요</string>
    <string name="str_location_permission_msg_2">알림을 받아보시려면, 위치 권한을</string>
    <string name="str_location_permission_msg_3">"항상 허용"</string>
    <string name="str_location_permission_msg_4">설정해 주세요.</string>
    <string name="str_location_permission_msg_5">- 앱을 종료하거나 미사용 중에도 위치 데이터를 이용하여 알림을 보낼 수 있어요</string>
    <string name="str_location_permission_msg_6">- 위치 데이터는 저장되지 않아요.</string>
    <string name="str_location_permission_msg_7">으로</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>