<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_r8_f_white"
        android:orientation="vertical"
        android:paddingBottom="16dp">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/common_dialog_even_title"
            style="@style/Label.L"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginHorizontal="20dp"
            android:paddingVertical="16dp"
            android:text="@string/str_noti" />
        <View
            android:id="@+id/common_dialog_even_divide"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray_100"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:layout_marginStart="20dp"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_pin_black"/>
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Label.L"
                android:layout_marginStart="8dp"
                android:text="@string/str_location"/>

        </LinearLayout>

        <TextView
            android:id="@+id/common_dialog_even_msg"
            style="@style/Paragraph.S"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/str_app_permission_storage_popup_desc" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/tv_dialog_common_even_right"
                style="@style/FButton"
                android:ellipsize="end"
                android:text="@string/str_confirm" />
        </LinearLayout>
    </LinearLayout>

</layout>