<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_100"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="10dp"
            android:orientation="horizontal">
            <TextView
                style="@style/Label.L"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_create_routine"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:padding="6dp"
                android:src="@drawable/ic_close_black"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Label.L"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:text="어떻게 실행할까요?"/>
        <LinearLayout
            android:id="@+id/ll_create_routine_how"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal"
            android:background="@drawable/bg_r16_f_white"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="16dp"
            android:paddingHorizontal="16dp"
            android:gravity="center_vertical">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_plus_black"/>
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Paragraph.M"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="이 루틴이 동작되는 조건 추가하기"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_create_routine_how_view"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal"
            android:background="@drawable/bg_r16_f_white"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="16dp"
            android:paddingHorizontal="16dp"
            android:gravity="center_vertical">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_pin_stroke"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_create_routine_how_hour"
                        style="@style/Paragraph.M"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:textColor="@color/blue_400" />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_create_routine_how_hour2"
                        style="@style/Paragraph.M"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:textColor="@color/blue_400" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_create_routine_how_days"
                    style="@style/Paragraph.M"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/blue_400" />
            </LinearLayout>

        </LinearLayout>
        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Label.L"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="40dp"
            android:text="언제 실행할까요?"/>
        <LinearLayout
            android:id="@+id/ll_create_routine_time"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal"
            android:background="@drawable/bg_r16_f_white"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="16dp"
            android:paddingHorizontal="16dp"
            android:gravity="center_vertical">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_plus_black"/>
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Paragraph.M"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="이 루틴이 시작되는 조건 추가하기"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_create_routine_time_view"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal"
            android:background="@drawable/bg_r16_f_white"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="16dp"
            android:paddingHorizontal="16dp"
            android:gravity="center_vertical">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_clock_black"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_create_routine_time_days"
                    style="@style/Paragraph.M"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/blue_400" />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_time_remove"
                style="@style/PrimaryButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:visibility="gone"
                android:text="@string/str_remove" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_time_cancel"
                style="@style/PrimaryButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/str_cancel" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_time_complete"
                style="@style/PrimaryButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/str_save" />
        </LinearLayout>
    </LinearLayout>

</layout>